--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,3 +1,7 @@
+@import "./common.scss";
+@import "./body.scss";
+@import "./board.scss";
 @import "./week.scss";
-@import "./gather.scss";
-@import "./plan.scss";
+@import "./task.scss";
+@import "./old.scss";
+@import "./icon.scss";
