完成导入 双向绑定

--- a/src/script/template/preview.html
+++ b/src/script/template/preview.html
@@ -1,7 +1,7 @@
 <div class="preview-view">
     <h3>代码</h3>
     <div class="code">
-        <textarea>{{code}}</textarea>
+        <textarea v-model="code"></textarea>
         <input type="button" value="导入" v-on:click="importData">
     </div>
     <h3>预览</h3>
