--- a/src/style/body.scss
+++ b/src/style/body.scss
@@ -2,7 +2,29 @@
     background: #54D09F;
     width: 100%;
     height: 6rem;
+    padding: 0 1rem;
+
+    .router {
+        float: left;
+        a {
+            margin-right: 1rem;
+        }
+        h4 {
+            display: inline-block;
+        }
+    }
+
+    .user {
+        margin-top: 1.5rem;
+        float: right;
+    }
+
+    input {
+        border: none;
+        background-color: #54D09F;
+    }
 }
+
 .main {
     position: fixed;
     top: 6rem;
