完成基本版

--- a/src/script/template/task.html
+++ b/src/script/template/task.html
@@ -15,19 +15,19 @@
         <div class="inner">
             <div class="select-option-list">
                 <div class="select-option-item">
-                    <span class="font-12">平台</span>
+                    <div class="font-12">平台</div>
                     <v-select :value.sync="project" :options="projectOptions" :close-on-select="true"></v-select>
                 </div>
                 <div class="select-option-item">
-                    <span class="font-12">项目</span>
+                    <div class="font-12">项目</div>
                     <v-select :value.sync="subProject" :options="subProjectOptions" :close-on-select="true"></v-select>
                 </div>
                 <div class="select-option-item">
-                    <span class="font-12">应用平台</span>
+                    <div class="font-12">应用平台</div>
                     <v-select :value.sync="projectType" :options="projectTypeOptions" :close-on-select="true"></v-select>
                 </div>
                 <div class="select-option-item">
-                    <span class="font-12">状态</span>
+                    <div class="font-12">状态</div>
                     <v-select :value.sync="status" :options="statusOptions" :close-on-select="true"></v-select>
                 </div>
             </div>
